Icons, fixes, QoL changes
+ Added support for new tab note panel

* Ported most icon changes to icons.css
* Fixed acrylic recreation
* Fixed acrylic texture tweak not being applied to rounded corners tweak
* Fixed sidebar causing issues with rounded corners tweak
* Fixed shorter titlebar buttons tweak proportions
* Fixed several buttons (with help from [QuietRobot](https://github.com/quietrobot))
* Reworked some variables
* Adjusted tab bar left-side margin
* Fixed search bar jumping when selected
* Fixed tab note flag causing tab previews to infinitely reanimate
* Fixed scrollbar in AI text selection pop up
* Fixed URLbar corners with pill tweak
* Minor adjustments to about Firefox pop up
* Fixed shadows and context menu color in built-in browser pages

- Removed download list animation

--- a/chrome/toolbar/tabbar.css
+++ b/chrome/toolbar/tabbar.css
@@ -218,7 +218,7 @@
 /* Native titlebar button metrics */
 @media -moz-pref("uc.winui.shorter-titlebar-buttons") {
   .titlebar-button{
-    height: 29px !important;
+    height: 32px !important;
     width: 45px !important;
     display: block;
   }
@@ -226,7 +226,7 @@
     margin-right: 1px !important;
   }
   .titlebar-button::before{
-    margin-top: 1px;
+    margin-top: 3px;
   }
 }
 
